[project]
name = "dio-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Cristiano Muroni",email = "muronidev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "databases[aiosqlite] (>=0.9.0,<0.10.0)",
    "pyjwt[crypto] (>=2.12.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
